--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,1 +1,11 @@
-<p>dashboard works!</p>
+<div class="row row-cols-1 row-cols-md-4 g-4">
+    <div class="col p-3" *ngFor="let product of products">
+        <div class="card text-center">
+            <img src={{product.imageUrl}} class="card-img-top" alt="...">
+            <div class="card-body">
+                <h5 class="card-title">{{product.name}}</h5>
+                <p class="card-text">{{product.description}}</p>
+            </div>
+        </div>
+    </div>
+</div>
