Added product detail page

--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -1,10 +1,11 @@
 <div class="row row-cols-1 row-cols-md-4 g-4">
     <div class="col p-3" *ngFor="let product of products">
-        <div class="card text-center">
+        <div class="card text-center" (click)="showDetails(product.id)">
             <img src={{product.imageUrl}} class="card-img-top" alt="...">
             <div class="card-body">
                 <h5 class="card-title">{{product.name}}</h5>
-                <p class="card-text">{{product.description}}</p>
+                <p class="card-text">{{product.metadata.description}}</p>
+                <b class="text-success">{{product.price | currency:"INR":"symbol"}}</b>
             </div>
         </div>
     </div>
