--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,10 +7,10 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="#">Home</a>
+          <a class="nav-link" aria-current="page" href="#">About</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Link</a>
+          <a class="nav-link" href="#">Contact</a>
         </li>
       </ul>
       <form class="d-flex d-inline w-50">
@@ -21,5 +21,5 @@
   </div>
 </nav>
 <div class="container-fluid">
-  <app-dashboard></app-dashboard>
+  <router-outlet></router-outlet>
 </div>
