about page componant added

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,5 +1,5 @@
 * {
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: 'Roboto';
 }
 
 .navbar {
@@ -12,4 +12,17 @@
 
 .nav-link {
     color: white;
+}
+
+.footer-basic {
+    background-color: #232328;
+    color: white;
+}
+
+.footer-basic .copyright {
+    margin-top:15px;
+    text-align:center;
+    font-size:13px;
+    color:#aaa;
+    margin-bottom:0;
 }
