--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,5 +1,6 @@
 * {
     font-family: 'Roboto';
+    position: relative;
 }
 
 .navbar {
@@ -14,15 +15,6 @@
     color: white;
 }
 
-.footer-basic {
-    background-color: #232328;
-    color: white;
-}
-
-.footer-basic .copyright {
-    margin-top:15px;
-    text-align:center;
-    font-size:13px;
-    color:#aaa;
-    margin-bottom:0;
+.contant {
+    min-height: calc(100vh - 56px - 150px);
 }
