--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -1,3 +1,21 @@
+<div class="col-md-4 search-bar">
+    <div>
+        <h2>Products</h2>
+    </div>
+    <div class="input-group rounded">
+        <input 
+            type="search" 
+            class="form-control rounded" 
+            placeholder="search products.." 
+            aria-label="Search" 
+            aria-describedby="search-addon"
+            [(ngModel)]="searchTerm"
+            (ngModelChange)="searchProduct()" />
+        <span class="input-group-text" id="search-addon">
+            <i class="fa fa-search"></i>
+        </span>
+    </div>
+</div>
 <div class="row row-cols-1 row-cols-md-4 g-4">
     <div class="col p-3" *ngFor="let product of products">
         <div class="card text-center" (click)="showDetails(product.id)">
