Added slider in dashboard

--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -1,4 +1,4 @@
-<div class="col-md-4 search-bar">
+<!-- <div class="col-md-4 search-bar">
     <div>
         <h2>Products</h2>
     </div>
@@ -15,7 +15,8 @@
             <i class="fa fa-search"></i>
         </span>
     </div>
-</div>
+</div> -->
+<app-feature-slider></app-feature-slider>
 <div class="row row-cols-1 row-cols-md-4 g-4">
     <div class="col p-3" *ngFor="let product of products">
         <div class="card text-center" (click)="showDetails(product.id)">
