--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -4,15 +4,16 @@
 }
 
 .navbar {
-    background-color: #232328;
 }
 
 .navbar-brand {
-    color: white;
+    color: #323234;
+    font-size: xx-large;
 }
 
 .nav-link {
-    color: white;
+    color: #323234;
+    font-size: large;
 }
 
 .contant {
